Custom radiobutton control template was created.  Question viewmodel initialization was migrated to appearing command for the usage of primary constructor. Better style and isolation on the UI.

--- a/QuizGame/Resources/Styles/Colors.xaml
+++ b/QuizGame/Resources/Styles/Colors.xaml
@@ -27,6 +27,9 @@
     <Color x:Key="Gray600">#404040</Color>
     <Color x:Key="Gray900">#212121</Color>
     <Color x:Key="Gray950">#141414</Color>
+    
+    <Color x:Key="CodeBackgroundLight">#f6f6f6</Color>
+    <Color x:Key="CodeBackgroundDark">#1c1b1b</Color>
 
     <SolidColorBrush x:Key="PrimaryBrush" Color="{StaticResource Primary}"/>
     <SolidColorBrush x:Key="SecondaryBrush" Color="{StaticResource Secondary}"/>
