--- a/QuizGame/Resources/Styles/Styles.xaml
+++ b/QuizGame/Resources/Styles/Styles.xaml
@@ -249,24 +249,19 @@
     </Style>
 
     <Style TargetType="RadioButton">
+        <Setter Property="ControlTemplate" Value="{StaticResource RadioButtonTemplate}" />
         <Setter Property="BackgroundColor" Value="Transparent"/>
-        <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}" />
+        <Setter Property="TextColor" Value="{StaticResource White}" />
         <Setter Property="FontFamily" Value="OpenSansRegular"/>
         <Setter Property="FontSize" Value="14"/>
-        <Setter Property="MinimumHeightRequest" Value="44"/>
-        <Setter Property="MinimumWidthRequest" Value="44"/>
-        <Setter Property="VisualStateManager.VisualStateGroups">
-            <VisualStateGroupList>
-                <VisualStateGroup x:Name="CommonStates">
-                    <VisualState x:Name="Normal" />
-                    <VisualState x:Name="Disabled">
-                        <VisualState.Setters>
-                            <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Gray300}, Dark={StaticResource Gray600}}" />
-                        </VisualState.Setters>
-                    </VisualState>
-                </VisualStateGroup>
-            </VisualStateGroupList>
-        </Setter>
+        <Style.Triggers>
+            <Trigger TargetType="RadioButton" Property="IsChecked" Value="False">
+                <Setter Property="BorderColor" Value="{StaticResource Gray200}" />
+            </Trigger>
+            <Trigger TargetType="RadioButton" Property="IsChecked" Value="True">
+                <Setter Property="BorderColor" Value="{StaticResource Tertiary}" />
+            </Trigger>
+        </Style.Triggers>
     </Style>
 
     <Style TargetType="RefreshView">
